syntax = "proto3";
package followlist;
option go_package = "tinytiktok/user/proto/followlist";

import "user/info.proto";

message FollowListRequest {
  int64 user_id=1;  //用户id
  string token=2;  //用户鉴权
}

message FollowListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated info.User user_list = 3; // 用户信息列表
}